--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+:root{
+    --blanco:#FFFFFF;
+    --oscuro:#212121;
+    --primario:#FFC107;
+    --secundario:#0097A7;
+    --gris:#757575;
+}
 html{
     font-size:62.5%;
 
@@ -6,12 +13,12 @@ html{
 
 body{
     font-size: 16px;
+    font-family: 'Krub', sans-serif;
 }
 
 .title{
    text-align: center; 
    font-size: 3.8rem;
-   
 }
 
 .title span{
