--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,22 @@ body{
 .title span{
     font-size: 2rem;
 }
+
+.contenedor{
+    width: 120rem;
+    margin:0 auto;
+}
+
+.nav-bg{
+    background-color: var(--secundario);
+}
+.navegador-principal{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+.navegador-principal a{
+    color: var(--blanco);
+    text-decoration: none;
+
+}
