--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,17 @@ body{
     background-color: var(--secundario);
 }
 .navegador-principal{
-    padding: 1rem;
     display: flex;
     justify-content: space-evenly;
 }
 .navegador-principal a{
+    padding: 1rem;
     color: var(--blanco);
     text-decoration: none;
-
+    font-size: 2rem;
+    font-weight: 700;
+}
+.navegador-principal a:hover{
+    background-color: var(--primario);
+    color: var(--oscuro);
 }
